<resources>
    <string name="app_name">geopostcards2</string>
    <string name="action_settings">Settings</string>
    <string name="latitude">Lat :</string>
    <string name="longitude">Long :</string>
    <string name="provider_enabled">The provider %s is now enabled</string>
    <string name="provider_disabled">The provider %s is now disabled</string>
    <string name="provider_new_status">The provider %1$s has now a new status %2$s</string>
    <string name="titre">Titre :</string>
    <string name="descriptionImage">Commentaires image :</string>
    <string name="descriptionSon">Commentaires son :</string>
    <string name="descriptionVideo">Commentaires video :</string>
    <string name="message">Message :</string>
    <string name="media">Media :</string>
    <string name="image">Image</string>
    <string name="son">Son</string>
    <string name="video">Vidéo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="enregistrer">Enregistrer</string>
    <string name="url_image">URL image :</string>
    <string name="url_son">URL son :</string>
    <string name="url_video">URL vidéo :</string>
    <string name="action_save">Save</string>
    <string name="prompt_username">Username</string>

    <string name="create_user">Create user</string>





</resources>
