<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailPostCardActivity">


    <!-- ##### TITLE ##### -->

    <TextView
        android:id="@+id/detail_post_card_lbl_title"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/titre"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/detail_post_card_title"
        />

    <TextView
        android:id="@+id/detail_post_card_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/detail_post_card_lbl_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <!-- ##### MESSAGE ##### -->

    <TextView
        android:id="@+id/detail_post_card_lbl_message"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/message"
        app:layout_constraintTop_toBottomOf="@+id/detail_post_card_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/detail_post_card_message"
        />

    <TextView
        android:id="@+id/detail_post_card_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text|textMultiLine"
        app:layout_constraintLeft_toRightOf="@+id/detail_post_card_lbl_message"
        app:layout_constraintTop_toBottomOf="@+id/detail_post_card_title"
        app:layout_constraintRight_toRightOf="parent"
        />

    <!-- ##### IMAGE ##### -->

    <TextView
        android:id="@+id/detail_post_card_lbl_media"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/media"
        app:layout_constraintTop_toBottomOf="@+id/detail_post_card_message"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/detail_post_card_image_view"
        />


    <ImageView
        android:id="@+id/detail_post_card_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toBottomOf="@+id/detail_post_card_message"
        app:layout_constraintLeft_toRightOf="@+id/detail_post_card_lbl_media"
        />

    <!-- ##### DESCRIPTION IMAGE ##### -->

    <TextView
        android:id="@+id/detail_post_card_lbl_description_image"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/descriptionImage"
        app:layout_constraintTop_toBottomOf="@+id/detail_post_card_btn_video"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/detail_post_card_description_image"
        />

    <TextView
        android:id="@+id/detail_post_card_description_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text|textMultiLine"
        android:hint="@string/image"
        app:layout_constraintLeft_toRightOf="@+id/detail_post_card_lbl_description_image"
        app:layout_constraintTop_toBottomOf="@+id/detail_post_card_btn_video"
        app:layout_constraintRight_toRightOf="parent"
        />

    <!-- ##### DESCRIPTION SON ##### -->

    <TextView
        android:id="@+id/detail_post_card_lbl_description_son"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/descriptionSon"
        app:layout_constraintTop_toBottomOf="@+id/detail_post_card_description_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/detail_post_card_description_son"
        />

    <TextView
        android:id="@+id/detail_post_card_description_son"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text|textMultiLine"
        android:hint="@string/son"
        app:layout_constraintLeft_toRightOf="@+id/detail_post_card_lbl_description_son"
        app:layout_constraintTop_toBottomOf="@+id/detail_post_card_description_image"
        app:layout_constraintRight_toRightOf="parent"
        />

    <!-- ##### DESCRIPTION VIDEO ##### -->

    <TextView
        android:id="@+id/detail_post_card_lbl_description_video"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/descriptionVideo"
        app:layout_constraintTop_toBottomOf="@+id/detail_post_card_description_son"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/detail_post_card_description_video"
        />

    <TextView
        android:id="@+id/detail_post_card_description_video"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text|textMultiLine"
        android:hint="@string/video"
        app:layout_constraintLeft_toRightOf="@+id/detail_post_card_lbl_description_video"
        app:layout_constraintTop_toBottomOf="@+id/detail_post_card_description_son"
        app:layout_constraintRight_toRightOf="parent"
        />

    <!-- ##### LATITUDE ##### -->

    <TextView
        android:id="@+id/detail_post_card_lbl_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        app:layout_constraintBaseline_toBaselineOf="@+id/detail_post_card_latitude"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/detail_post_card_latitude"
        />

    <TextView
        android:id="@+id/detail_post_card_latitude"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/detail_post_card_lbl_latitude"
        />

    <!-- ##### LONGITUDE ##### -->

    <TextView
        android:id="@+id/detail_post_card_lbl_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        app:layout_constraintBaseline_toBaselineOf="@+id/detail_post_card_longitude"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/detail_post_card_latitude"
        app:layout_constraintRight_toLeftOf="@+id/detail_post_card_longitude"
        />

    <TextView
        android:id="@+id/detail_post_card_longitude"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/detail_post_card_lbl_longitude"
        app:layout_constraintRight_toRightOf="parent"
        />

</android.support.constraint.ConstraintLayout>