<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreatePostCardActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:minHeight="500dp">

        <!-- ##### TITLE ##### -->

        <TextView
            android:id="@+id/create_post_card_lbl_title"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/titre"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/create_post_card_title"
        />

        <EditText
            android:id="@+id/create_post_card_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toRightOf="@+id/create_post_card_lbl_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
        />

        <!-- ##### MESSAGE ##### -->

        <TextView
            android:id="@+id/create_post_card_lbl_message"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/message"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/create_post_card_message"
        />

        <EditText
            android:id="@+id/create_post_card_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:inputType="text|textMultiLine"
            android:minLines="5"
            android:scrollbars="vertical"
            android:maxHeight="140dp"
            app:layout_constraintLeft_toRightOf="@+id/create_post_card_lbl_message"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_title"
            app:layout_constraintRight_toRightOf="parent"
        />

        <!-- ##### MEDIA ##### -->

        <TextView
            android:id="@+id/create_post_card_lbl_media"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/media"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_message"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/create_post_card_btn_image"
        />

        <Button
            android:id="@+id/create_post_card_btn_image"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:text="@string/image"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_message"
            app:layout_constraintLeft_toRightOf="@+id/create_post_card_lbl_media"
        />

        <Button
            android:id="@+id/create_post_card_btn_son"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:text="@string/son"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_message"
            app:layout_constraintLeft_toRightOf="@+id/create_post_card_btn_image"
        />

        <Button
            android:id="@+id/create_post_card_btn_video"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:text="@string/video"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_message"
            app:layout_constraintLeft_toRightOf="@+id/create_post_card_btn_son"
        />

        <!-- ##### DESCRIPTION ET URL IMAGE ##### -->

        <ImageView
            android:id="@+id/create_post_card_thumbnail_image"
            android:layout_width="90dp"
            android:layout_height="180dp"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_btn_video"
        />

        <TextView
            android:id="@+id/create_post_card_lbl_image_hidden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url_image"
            android:layout_marginLeft="10dp"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_btn_video"
            app:layout_constraintLeft_toRightOf="@+id/create_post_card_thumbnail_image"
        />

        <EditText
            android:id="@+id/create_post_card_image_hidden"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scrollbars="horizontal"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_lbl_image_hidden"
            app:layout_constraintLeft_toRightOf="@+id/create_post_card_thumbnail_image"
            app:layout_constraintRight_toRightOf="parent"
        />

        <TextView
            android:id="@+id/create_post_card_lbl_description_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptionImage"
            android:layout_marginLeft="10dp"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_image_hidden"
            app:layout_constraintLeft_toRightOf="@+id/create_post_card_thumbnail_image"
        />

        <EditText
            android:id="@+id/create_post_card_description_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text|textMultiLine"
            android:scrollbars="vertical"
            android:layout_marginLeft="10dp"
            android:maxHeight="140dp"
            android:minLines="3"
            android:hint="@string/image"
            app:layout_constraintBottom_toBottomOf="@id/create_post_card_thumbnail_image"
            app:layout_constraintTop_toBottomOf="@id/create_post_card_lbl_description_image"
            app:layout_constraintLeft_toRightOf="@+id/create_post_card_thumbnail_image"
            app:layout_constraintRight_toRightOf="parent"
        />

        <!-- ##### DESCRIPTION ET URL SON ##### -->

        <TextView
            android:id="@+id/create_post_card_lbl_son_hidden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url_son"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_description_image"
            app:layout_constraintLeft_toLeftOf="parent"
        />

        <EditText
            android:id="@+id/create_post_card_son_hidden"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scrollbars="horizontal"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_lbl_son_hidden"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
        />

        <TextView
            android:id="@+id/create_post_card_lbl_description_son"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/descriptionSon"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_son_hidden"
            app:layout_constraintLeft_toLeftOf="parent"
        />

        <EditText
            android:id="@+id/create_post_card_description_son"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text|textMultiLine"
            android:scrollbars="vertical"
            android:maxHeight="140dp"
            android:minLines="5"
            android:hint="@string/son"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_lbl_description_son"
            app:layout_constraintRight_toRightOf="parent"
        />

        <!-- ##### DESCRIPTION VIDEO ##### -->

        <TextView
            android:id="@+id/create_post_card_lbl_video_hidden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url_video"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_description_son"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <EditText
            android:id="@+id/create_post_card_video_hidden"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scrollbars="horizontal"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_lbl_video_hidden"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/create_post_card_lbl_description_video"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/descriptionVideo"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_video_hidden"
            app:layout_constraintLeft_toLeftOf="parent"
        />

        <EditText
            android:id="@+id/create_post_card_description_video"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text|textMultiLine"
            android:minLines="5"
            android:scrollbars="vertical"
            android:maxHeight="140dp"
            android:hint="@string/video"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_lbl_description_video"
            app:layout_constraintRight_toRightOf="parent"
        />

        <!-- ##### LATITUDE ##### -->

        <TextView
            android:id="@+id/create_post_card_lbl_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            app:layout_constraintBaseline_toBaselineOf="@+id/create_post_card_latitude"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/create_post_card_latitude"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_description_video"
        />

        <EditText
            android:id="@+id/create_post_card_latitude"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/create_post_card_lbl_latitude"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_description_video"
        />

        <!-- ##### LONGITUDE ##### -->

        <TextView
            android:id="@+id/create_post_card_lbl_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            app:layout_constraintBaseline_toBaselineOf="@+id/create_post_card_longitude"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/create_post_card_latitude"
            app:layout_constraintRight_toLeftOf="@+id/create_post_card_longitude"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_description_video"
        />

        <EditText
            android:id="@+id/create_post_card_longitude"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/create_post_card_lbl_longitude"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_post_card_description_video"
        />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>